<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginStart="25dp"
    android:layout_marginEnd="25dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/verify_phone_number"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textSize="14sp"
        android:text="@string/intruksi1"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edt_cover_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:text="+62"/>


        <EditText
            android:id="@+id/edt_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:shadowColor="@color/colorPrimary"
            android:layout_weight="3"/>

    </LinearLayout>


    <Button
        android:id="@+id/btn_lanjut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginTop="25dp"
        android:text="@string/lanjut"/>

</LinearLayout>