<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_centerInParent="true"
    android:background="@drawable/bg_splash"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/address"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/tv_name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginBottom="25dp"
        android:text="@string/name_profile"/>

    <LinearLayout
        android:id="@+id/linear_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@id/tv_name_profile"
        android:orientation="vertical"
        android:background="@drawable/round_profile">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:text="@string/user_profile"/>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginStart="5dp"
                    android:textStyle="bold"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/round_edittext"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobile_number"
                    android:textStyle="bold"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/colorText"
                    android:textSize="16sp"/>

                <EditText
                    android:id="@+id/edt_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@drawable/round_edittext"/>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textColor="@color/colorText"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="@drawable/round_edittext"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:layout_gravity="center"
            android:background="@drawable/round_button_primary"
            android:text="@string/edit_profile"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:layout_marginTop="25dp"/>

    </LinearLayout>

</RelativeLayout>